[workspace]
resolver = "2"
members = [
    "src/security_api",
    "src/security_poller",
    "src/security_discord"
]

[workspace.dependencies]
anyhow = "1.0.93"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "http2", "rustls-tls", "rustls-tls-webpki-roots"] }