[package]
name = "sexurity-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.12.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
regex = "1.4.2"
serde = "1.0.163"
serde_json = "1.0.96"
redis = "0.23.0"
