[package]
name = "security_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.12.0"
reqwest.workspace = true
regex = "1.4.2"
serde = "1.0.163"
serde_json = "1.0.96"
redis = "0.23.0"
chrono = "0.4.24"
nanoid = "0.4.0"
anyhow.workspace = true
deadpool-redis = "0.18.0"
