[package]
name = "security_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
reqwest.workspace = true
security_api = { path = "../security_api" }
serde.workspace = true
serde_json.workspace = true
twilight-util = { version = "0.15.2", features = ["builder"] }
twilight-model = "0.15.2"
log.workspace = true
pretty_env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures-util = "0.3.31"
