[package]
name = "security_poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.12.0"
serde.workspace = true
serde_json.workspace = true
security_api = { path = "../security_api" }
clap = { version = "4.0", features = ["derive", "env"] }
chrono = "0.4.24"
cronjob = "0.4.17"
log.workspace = true
pretty_env_logger.workspace = true
