[package]
name = "sexurity-poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.12.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sexurity-api = { path = "../sexurity-api" }
clap = { version = "4.0", features = ["derive", "env"] }
chrono = "0.4.24"
cronjob = "0.4.17"

